// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adapter can fetch bed with header 1`] = `
Array [
  Object {
    "end": 3009,
    "refName": "contigA",
    "start": 3000,
    "strand": 0,
    "uniqueId": "bed-163098",
  },
  Object {
    "end": 3114,
    "refName": "contigA",
    "start": 3105,
    "strand": 0,
    "uniqueId": "bed-163116",
  },
  Object {
    "end": 3161,
    "refName": "contigA",
    "start": 3152,
    "strand": 0,
    "uniqueId": "bed-163134",
  },
  Object {
    "end": 3180,
    "refName": "contigA",
    "start": 3171,
    "strand": 0,
    "uniqueId": "bed-163152",
  },
  Object {
    "end": 3183,
    "refName": "contigA",
    "start": 3174,
    "strand": 0,
    "uniqueId": "bed-163170",
  },
  Object {
    "end": 3222,
    "refName": "contigA",
    "start": 3213,
    "strand": 0,
    "uniqueId": "bed-163188",
  },
  Object {
    "end": 3474,
    "refName": "contigA",
    "start": 3465,
    "strand": 0,
    "uniqueId": "bed-163206",
  },
  Object {
    "end": 3804,
    "refName": "contigA",
    "start": 3795,
    "strand": 0,
    "uniqueId": "bed-163224",
  },
  Object {
    "end": 4044,
    "refName": "contigA",
    "start": 4035,
    "strand": 0,
    "uniqueId": "bed-163242",
  },
  Object {
    "end": 4082,
    "refName": "contigA",
    "start": 4073,
    "strand": 0,
    "uniqueId": "bed-163260",
  },
  Object {
    "end": 4083,
    "refName": "contigA",
    "start": 4074,
    "strand": 0,
    "uniqueId": "bed-163278",
  },
  Object {
    "end": 4175,
    "refName": "contigA",
    "start": 4166,
    "strand": 0,
    "uniqueId": "bed-163296",
  },
  Object {
    "end": 4188,
    "refName": "contigA",
    "start": 4179,
    "strand": 0,
    "uniqueId": "bed-163314",
  },
  Object {
    "end": 4213,
    "refName": "contigA",
    "start": 4204,
    "strand": 0,
    "uniqueId": "bed-163332",
  },
  Object {
    "end": 4257,
    "refName": "contigA",
    "start": 4248,
    "strand": 0,
    "uniqueId": "bed-163350",
  },
  Object {
    "end": 4269,
    "refName": "contigA",
    "start": 4260,
    "strand": 0,
    "uniqueId": "bed-163368",
  },
  Object {
    "end": 4586,
    "refName": "contigA",
    "start": 4577,
    "strand": 0,
    "uniqueId": "bed-163386",
  },
  Object {
    "end": 4837,
    "refName": "contigA",
    "start": 4828,
    "strand": 0,
    "uniqueId": "bed-163404",
  },
  Object {
    "end": 4910,
    "refName": "contigA",
    "start": 4901,
    "strand": 0,
    "uniqueId": "bed-163422",
  },
  Object {
    "end": 5015,
    "refName": "contigA",
    "start": 5006,
    "strand": 0,
    "uniqueId": "bed-163440",
  },
  Object {
    "end": 5060,
    "refName": "contigA",
    "start": 5051,
    "strand": 0,
    "uniqueId": "bed-163458",
  },
  Object {
    "end": 5210,
    "refName": "contigA",
    "start": 5201,
    "strand": 0,
    "uniqueId": "bed-163476",
  },
  Object {
    "end": 5269,
    "refName": "contigA",
    "start": 5260,
    "strand": 0,
    "uniqueId": "bed-163494",
  },
  Object {
    "end": 5290,
    "refName": "contigA",
    "start": 5281,
    "strand": 0,
    "uniqueId": "bed-163512",
  },
  Object {
    "end": 5358,
    "refName": "contigA",
    "start": 5349,
    "strand": 0,
    "uniqueId": "bed-163530",
  },
  Object {
    "end": 5362,
    "refName": "contigA",
    "start": 5353,
    "strand": 0,
    "uniqueId": "bed-163548",
  },
  Object {
    "end": 5432,
    "refName": "contigA",
    "start": 5423,
    "strand": 0,
    "uniqueId": "bed-163566",
  },
  Object {
    "end": 5466,
    "refName": "contigA",
    "start": 5457,
    "strand": 0,
    "uniqueId": "bed-163584",
  },
  Object {
    "end": 5557,
    "refName": "contigA",
    "start": 5548,
    "strand": 0,
    "uniqueId": "bed-163602",
  },
  Object {
    "end": 5635,
    "refName": "contigA",
    "start": 5626,
    "strand": 0,
    "uniqueId": "bed-163620",
  },
  Object {
    "end": 5844,
    "refName": "contigA",
    "start": 5835,
    "strand": 0,
    "uniqueId": "bed-163638",
  },
  Object {
    "end": 5918,
    "refName": "contigA",
    "start": 5909,
    "strand": 0,
    "uniqueId": "bed-163656",
  },
  Object {
    "end": 5936,
    "refName": "contigA",
    "start": 5927,
    "strand": 0,
    "uniqueId": "bed-163674",
  },
  Object {
    "end": 5978,
    "refName": "contigA",
    "start": 5969,
    "strand": 0,
    "uniqueId": "bed-163692",
  },
  Object {
    "end": 6079,
    "refName": "contigA",
    "start": 6070,
    "strand": 0,
    "uniqueId": "bed-163710",
  },
  Object {
    "end": 6194,
    "refName": "contigA",
    "start": 6185,
    "strand": 0,
    "uniqueId": "bed-163728",
  },
  Object {
    "end": 6294,
    "refName": "contigA",
    "start": 6285,
    "strand": 0,
    "uniqueId": "bed-163746",
  },
  Object {
    "end": 6372,
    "refName": "contigA",
    "start": 6363,
    "strand": 0,
    "uniqueId": "bed-163764",
  },
  Object {
    "end": 6568,
    "refName": "contigA",
    "start": 6559,
    "strand": 0,
    "uniqueId": "bed-163782",
  },
  Object {
    "end": 6843,
    "refName": "contigA",
    "start": 6834,
    "strand": 0,
    "uniqueId": "bed-163800",
  },
  Object {
    "end": 6917,
    "refName": "contigA",
    "start": 6908,
    "strand": 0,
    "uniqueId": "bed-163818",
  },
  Object {
    "end": 6927,
    "refName": "contigA",
    "start": 6918,
    "strand": 0,
    "uniqueId": "bed-163836",
  },
  Object {
    "end": 7150,
    "refName": "contigA",
    "start": 7141,
    "strand": 0,
    "uniqueId": "bed-163854",
  },
  Object {
    "end": 7182,
    "refName": "contigA",
    "start": 7173,
    "strand": 0,
    "uniqueId": "bed-163872",
  },
  Object {
    "end": 7578,
    "refName": "contigA",
    "start": 7569,
    "strand": 0,
    "uniqueId": "bed-163890",
  },
  Object {
    "end": 7628,
    "refName": "contigA",
    "start": 7619,
    "strand": 0,
    "uniqueId": "bed-163908",
  },
  Object {
    "end": 7663,
    "refName": "contigA",
    "start": 7654,
    "strand": 0,
    "uniqueId": "bed-163926",
  },
  Object {
    "end": 7680,
    "refName": "contigA",
    "start": 7671,
    "strand": 0,
    "uniqueId": "bed-163944",
  },
  Object {
    "end": 7716,
    "refName": "contigA",
    "start": 7707,
    "strand": 0,
    "uniqueId": "bed-163962",
  },
  Object {
    "end": 7748,
    "refName": "contigA",
    "start": 7739,
    "strand": 0,
    "uniqueId": "bed-163980",
  },
  Object {
    "end": 8086,
    "refName": "contigA",
    "start": 8077,
    "strand": 0,
    "uniqueId": "bed-163998",
  },
  Object {
    "end": 8137,
    "refName": "contigA",
    "start": 8128,
    "strand": 0,
    "uniqueId": "bed-164016",
  },
  Object {
    "end": 8141,
    "refName": "contigA",
    "start": 8132,
    "strand": 0,
    "uniqueId": "bed-164034",
  },
  Object {
    "end": 8219,
    "refName": "contigA",
    "start": 8210,
    "strand": 0,
    "uniqueId": "bed-164052",
  },
  Object {
    "end": 8276,
    "refName": "contigA",
    "start": 8267,
    "strand": 0,
    "uniqueId": "bed-164070",
  },
  Object {
    "end": 8337,
    "refName": "contigA",
    "start": 8328,
    "strand": 0,
    "uniqueId": "bed-164088",
  },
  Object {
    "end": 8533,
    "refName": "contigA",
    "start": 8524,
    "strand": 0,
    "uniqueId": "bed-164106",
  },
  Object {
    "end": 8668,
    "refName": "contigA",
    "start": 8659,
    "strand": 0,
    "uniqueId": "bed-164124",
  },
  Object {
    "end": 8669,
    "refName": "contigA",
    "start": 8660,
    "strand": 0,
    "uniqueId": "bed-164142",
  },
  Object {
    "end": 8751,
    "refName": "contigA",
    "start": 8742,
    "strand": 0,
    "uniqueId": "bed-164160",
  },
  Object {
    "end": 8820,
    "refName": "contigA",
    "start": 8811,
    "strand": 0,
    "uniqueId": "bed-164178",
  },
  Object {
    "end": 8825,
    "refName": "contigA",
    "start": 8816,
    "strand": 0,
    "uniqueId": "bed-164196",
  },
  Object {
    "end": 8973,
    "refName": "contigA",
    "start": 8964,
    "strand": 0,
    "uniqueId": "bed-164214",
  },
  Object {
    "end": 9057,
    "refName": "contigA",
    "start": 9048,
    "strand": 0,
    "uniqueId": "bed-164232",
  },
  Object {
    "end": 9063,
    "refName": "contigA",
    "start": 9054,
    "strand": 0,
    "uniqueId": "bed-164250",
  },
  Object {
    "end": 9145,
    "refName": "contigA",
    "start": 9136,
    "strand": 0,
    "uniqueId": "bed-164268",
  },
  Object {
    "end": 9252,
    "refName": "contigA",
    "start": 9243,
    "strand": 0,
    "uniqueId": "bed-164286",
  },
  Object {
    "end": 9329,
    "refName": "contigA",
    "start": 9320,
    "strand": 0,
    "uniqueId": "bed-164304",
  },
  Object {
    "end": 9375,
    "refName": "contigA",
    "start": 9366,
    "strand": 0,
    "uniqueId": "bed-164322",
  },
  Object {
    "end": 9534,
    "refName": "contigA",
    "start": 9525,
    "strand": 0,
    "uniqueId": "bed-164340",
  },
  Object {
    "end": 9589,
    "refName": "contigA",
    "start": 9580,
    "strand": 0,
    "uniqueId": "bed-164358",
  },
  Object {
    "end": 9619,
    "refName": "contigA",
    "start": 9610,
    "strand": 0,
    "uniqueId": "bed-164376",
  },
  Object {
    "end": 9753,
    "refName": "contigA",
    "start": 9744,
    "strand": 0,
    "uniqueId": "bed-164394",
  },
  Object {
    "end": 9762,
    "refName": "contigA",
    "start": 9753,
    "strand": 0,
    "uniqueId": "bed-164412",
  },
  Object {
    "end": 9768,
    "refName": "contigA",
    "start": 9759,
    "strand": 0,
    "uniqueId": "bed-164430",
  },
  Object {
    "end": 9816,
    "refName": "contigA",
    "start": 9807,
    "strand": 0,
    "uniqueId": "bed-164448",
  },
  Object {
    "end": 9862,
    "refName": "contigA",
    "start": 9853,
    "strand": 0,
    "uniqueId": "bed-164466",
  },
  Object {
    "end": 9893,
    "refName": "contigA",
    "start": 9884,
    "strand": 0,
    "uniqueId": "bed-164484",
  },
  Object {
    "end": 9929,
    "refName": "contigA",
    "start": 9920,
    "strand": 0,
    "uniqueId": "bed-164502",
  },
  Object {
    "end": 10052,
    "refName": "contigA",
    "start": 10043,
    "strand": 0,
    "uniqueId": "bed-164520",
  },
  Object {
    "end": 10225,
    "refName": "contigA",
    "start": 10216,
    "strand": 0,
    "uniqueId": "bed-164540",
  },
  Object {
    "end": 10226,
    "refName": "contigA",
    "start": 10217,
    "strand": 0,
    "uniqueId": "bed-164560",
  },
  Object {
    "end": 10261,
    "refName": "contigA",
    "start": 10252,
    "strand": 0,
    "uniqueId": "bed-164580",
  },
  Object {
    "end": 10393,
    "refName": "contigA",
    "start": 10384,
    "strand": 0,
    "uniqueId": "bed-164600",
  },
  Object {
    "end": 10507,
    "refName": "contigA",
    "start": 10498,
    "strand": 0,
    "uniqueId": "bed-164620",
  },
  Object {
    "end": 10594,
    "refName": "contigA",
    "start": 10585,
    "strand": 0,
    "uniqueId": "bed-164640",
  },
  Object {
    "end": 10693,
    "refName": "contigA",
    "start": 10684,
    "strand": 0,
    "uniqueId": "bed-164660",
  },
  Object {
    "end": 10790,
    "refName": "contigA",
    "start": 10781,
    "strand": 0,
    "uniqueId": "bed-164680",
  },
  Object {
    "end": 10884,
    "refName": "contigA",
    "start": 10875,
    "strand": 0,
    "uniqueId": "bed-164700",
  },
  Object {
    "end": 11013,
    "refName": "contigA",
    "start": 11004,
    "strand": 0,
    "uniqueId": "bed-164720",
  },
  Object {
    "end": 11104,
    "refName": "contigA",
    "start": 11095,
    "strand": 0,
    "uniqueId": "bed-164740",
  },
  Object {
    "end": 11191,
    "refName": "contigA",
    "start": 11182,
    "strand": 0,
    "uniqueId": "bed-164760",
  },
  Object {
    "end": 11216,
    "refName": "contigA",
    "start": 11207,
    "strand": 0,
    "uniqueId": "bed-164780",
  },
  Object {
    "end": 11250,
    "refName": "contigA",
    "start": 11241,
    "strand": 0,
    "uniqueId": "bed-164800",
  },
  Object {
    "end": 11344,
    "refName": "contigA",
    "start": 11335,
    "strand": 0,
    "uniqueId": "bed-164820",
  },
  Object {
    "end": 11349,
    "refName": "contigA",
    "start": 11340,
    "strand": 0,
    "uniqueId": "bed-164840",
  },
  Object {
    "end": 11544,
    "refName": "contigA",
    "start": 11535,
    "strand": 0,
    "uniqueId": "bed-164860",
  },
  Object {
    "end": 11552,
    "refName": "contigA",
    "start": 11543,
    "strand": 0,
    "uniqueId": "bed-164880",
  },
  Object {
    "end": 11558,
    "refName": "contigA",
    "start": 11549,
    "strand": 0,
    "uniqueId": "bed-164900",
  },
  Object {
    "end": 11662,
    "refName": "contigA",
    "start": 11653,
    "strand": 0,
    "uniqueId": "bed-164920",
  },
  Object {
    "end": 11684,
    "refName": "contigA",
    "start": 11675,
    "strand": 0,
    "uniqueId": "bed-164940",
  },
  Object {
    "end": 11698,
    "refName": "contigA",
    "start": 11689,
    "strand": 0,
    "uniqueId": "bed-164960",
  },
  Object {
    "end": 11783,
    "refName": "contigA",
    "start": 11774,
    "strand": 0,
    "uniqueId": "bed-164980",
  },
  Object {
    "end": 11841,
    "refName": "contigA",
    "start": 11832,
    "strand": 0,
    "uniqueId": "bed-165000",
  },
  Object {
    "end": 12395,
    "refName": "contigA",
    "start": 12386,
    "strand": 0,
    "uniqueId": "bed-165020",
  },
  Object {
    "end": 12417,
    "refName": "contigA",
    "start": 12408,
    "strand": 0,
    "uniqueId": "bed-165040",
  },
  Object {
    "end": 12450,
    "refName": "contigA",
    "start": 12441,
    "strand": 0,
    "uniqueId": "bed-165060",
  },
  Object {
    "end": 12539,
    "refName": "contigA",
    "start": 12530,
    "strand": 0,
    "uniqueId": "bed-165080",
  },
  Object {
    "end": 12747,
    "refName": "contigA",
    "start": 12738,
    "strand": 0,
    "uniqueId": "bed-165100",
  },
]
`;

exports[`adapter can fetch features bed with autosql 1`] = `
Array [
  Object {
    "Entrez_Gene_Id": "2782",
    "Hugo_Symbol": "GNB1",
    "Matched_Norm_Sample_Barcode": "TCGA-OR-A5KB-11A-11D-A30A-10",
    "Reference_Allele": "T",
    "Tumor_Sample_Barcode": "TCGA-OR-A5KB-01A-11D-A30A-10",
    "Tumor_Seq_Allele1": "T",
    "Tumor_Seq_Allele2": "G",
    "Variant_Classification": "Splice_Region",
    "Variant_Type": "SNP",
    "alcohol_history": "--",
    "alcohol_intensity": "--",
    "bmi": "--",
    "case_id": "09454ed6-64bc-4a35-af44-7c4344623d45",
    "cigarettes_per_day": "--",
    "days_to_death": "--",
    "dbSNP_RS": "novel",
    "dbSNP_Val_Status": "",
    "end": 10,
    "ethnicity": "not hispanic or latino",
    "freq": "0.0108695652174",
    "gender": "female",
    "height": "--",
    "name": "T>G",
    "project_id": "TCGA-ACC",
    "refName": "ctgA",
    "reserved": "0,0,0",
    "sampleCount": "1",
    "score": 1,
    "start": 1,
    "strand": 0,
    "subfeatures": Array [
      Object {
        "end": 2,
        "parentId": "bed-52985",
        "start": 1,
        "strand": 0,
        "type": "three_prime_UTR",
        "uniqueId": "bed-52985-0",
      },
    ],
    "type": "mRNA",
    "uniqueId": "bed-52985",
    "weight": "--",
    "years_smoked": "--",
  },
]
`;

exports[`adapter can fetch features from volvox.sort.bed.gz simple bed3 1`] = `
Array [
  Object {
    "end": 3009,
    "refName": "contigA",
    "start": 3000,
    "strand": 0,
    "uniqueId": "bed-155162",
  },
  Object {
    "end": 3114,
    "refName": "contigA",
    "start": 3105,
    "strand": 0,
    "uniqueId": "bed-155180",
  },
  Object {
    "end": 3161,
    "refName": "contigA",
    "start": 3152,
    "strand": 0,
    "uniqueId": "bed-155198",
  },
  Object {
    "end": 3180,
    "refName": "contigA",
    "start": 3171,
    "strand": 0,
    "uniqueId": "bed-155216",
  },
  Object {
    "end": 3183,
    "refName": "contigA",
    "start": 3174,
    "strand": 0,
    "uniqueId": "bed-155234",
  },
  Object {
    "end": 3222,
    "refName": "contigA",
    "start": 3213,
    "strand": 0,
    "uniqueId": "bed-155252",
  },
  Object {
    "end": 3474,
    "refName": "contigA",
    "start": 3465,
    "strand": 0,
    "uniqueId": "bed-155270",
  },
  Object {
    "end": 3804,
    "refName": "contigA",
    "start": 3795,
    "strand": 0,
    "uniqueId": "bed-155288",
  },
  Object {
    "end": 4044,
    "refName": "contigA",
    "start": 4035,
    "strand": 0,
    "uniqueId": "bed-155306",
  },
  Object {
    "end": 4082,
    "refName": "contigA",
    "start": 4073,
    "strand": 0,
    "uniqueId": "bed-155324",
  },
  Object {
    "end": 4083,
    "refName": "contigA",
    "start": 4074,
    "strand": 0,
    "uniqueId": "bed-155342",
  },
  Object {
    "end": 4175,
    "refName": "contigA",
    "start": 4166,
    "strand": 0,
    "uniqueId": "bed-155360",
  },
  Object {
    "end": 4188,
    "refName": "contigA",
    "start": 4179,
    "strand": 0,
    "uniqueId": "bed-155378",
  },
  Object {
    "end": 4213,
    "refName": "contigA",
    "start": 4204,
    "strand": 0,
    "uniqueId": "bed-155396",
  },
  Object {
    "end": 4257,
    "refName": "contigA",
    "start": 4248,
    "strand": 0,
    "uniqueId": "bed-155414",
  },
  Object {
    "end": 4269,
    "refName": "contigA",
    "start": 4260,
    "strand": 0,
    "uniqueId": "bed-155432",
  },
  Object {
    "end": 4586,
    "refName": "contigA",
    "start": 4577,
    "strand": 0,
    "uniqueId": "bed-155450",
  },
  Object {
    "end": 4837,
    "refName": "contigA",
    "start": 4828,
    "strand": 0,
    "uniqueId": "bed-155468",
  },
  Object {
    "end": 4910,
    "refName": "contigA",
    "start": 4901,
    "strand": 0,
    "uniqueId": "bed-155486",
  },
  Object {
    "end": 5015,
    "refName": "contigA",
    "start": 5006,
    "strand": 0,
    "uniqueId": "bed-155504",
  },
  Object {
    "end": 5060,
    "refName": "contigA",
    "start": 5051,
    "strand": 0,
    "uniqueId": "bed-155522",
  },
  Object {
    "end": 5210,
    "refName": "contigA",
    "start": 5201,
    "strand": 0,
    "uniqueId": "bed-155540",
  },
  Object {
    "end": 5269,
    "refName": "contigA",
    "start": 5260,
    "strand": 0,
    "uniqueId": "bed-155558",
  },
  Object {
    "end": 5290,
    "refName": "contigA",
    "start": 5281,
    "strand": 0,
    "uniqueId": "bed-155576",
  },
  Object {
    "end": 5358,
    "refName": "contigA",
    "start": 5349,
    "strand": 0,
    "uniqueId": "bed-155594",
  },
  Object {
    "end": 5362,
    "refName": "contigA",
    "start": 5353,
    "strand": 0,
    "uniqueId": "bed-155612",
  },
  Object {
    "end": 5432,
    "refName": "contigA",
    "start": 5423,
    "strand": 0,
    "uniqueId": "bed-155630",
  },
  Object {
    "end": 5466,
    "refName": "contigA",
    "start": 5457,
    "strand": 0,
    "uniqueId": "bed-155648",
  },
  Object {
    "end": 5557,
    "refName": "contigA",
    "start": 5548,
    "strand": 0,
    "uniqueId": "bed-155666",
  },
  Object {
    "end": 5635,
    "refName": "contigA",
    "start": 5626,
    "strand": 0,
    "uniqueId": "bed-155684",
  },
  Object {
    "end": 5844,
    "refName": "contigA",
    "start": 5835,
    "strand": 0,
    "uniqueId": "bed-155702",
  },
  Object {
    "end": 5918,
    "refName": "contigA",
    "start": 5909,
    "strand": 0,
    "uniqueId": "bed-155720",
  },
  Object {
    "end": 5936,
    "refName": "contigA",
    "start": 5927,
    "strand": 0,
    "uniqueId": "bed-155738",
  },
  Object {
    "end": 5978,
    "refName": "contigA",
    "start": 5969,
    "strand": 0,
    "uniqueId": "bed-155756",
  },
  Object {
    "end": 6079,
    "refName": "contigA",
    "start": 6070,
    "strand": 0,
    "uniqueId": "bed-155774",
  },
  Object {
    "end": 6194,
    "refName": "contigA",
    "start": 6185,
    "strand": 0,
    "uniqueId": "bed-155792",
  },
  Object {
    "end": 6294,
    "refName": "contigA",
    "start": 6285,
    "strand": 0,
    "uniqueId": "bed-155810",
  },
  Object {
    "end": 6372,
    "refName": "contigA",
    "start": 6363,
    "strand": 0,
    "uniqueId": "bed-155828",
  },
  Object {
    "end": 6568,
    "refName": "contigA",
    "start": 6559,
    "strand": 0,
    "uniqueId": "bed-155846",
  },
  Object {
    "end": 6843,
    "refName": "contigA",
    "start": 6834,
    "strand": 0,
    "uniqueId": "bed-155864",
  },
  Object {
    "end": 6917,
    "refName": "contigA",
    "start": 6908,
    "strand": 0,
    "uniqueId": "bed-155882",
  },
  Object {
    "end": 6927,
    "refName": "contigA",
    "start": 6918,
    "strand": 0,
    "uniqueId": "bed-155900",
  },
  Object {
    "end": 7150,
    "refName": "contigA",
    "start": 7141,
    "strand": 0,
    "uniqueId": "bed-155918",
  },
  Object {
    "end": 7182,
    "refName": "contigA",
    "start": 7173,
    "strand": 0,
    "uniqueId": "bed-155936",
  },
  Object {
    "end": 7578,
    "refName": "contigA",
    "start": 7569,
    "strand": 0,
    "uniqueId": "bed-155954",
  },
  Object {
    "end": 7628,
    "refName": "contigA",
    "start": 7619,
    "strand": 0,
    "uniqueId": "bed-155972",
  },
  Object {
    "end": 7663,
    "refName": "contigA",
    "start": 7654,
    "strand": 0,
    "uniqueId": "bed-155990",
  },
  Object {
    "end": 7680,
    "refName": "contigA",
    "start": 7671,
    "strand": 0,
    "uniqueId": "bed-156008",
  },
  Object {
    "end": 7716,
    "refName": "contigA",
    "start": 7707,
    "strand": 0,
    "uniqueId": "bed-156026",
  },
  Object {
    "end": 7748,
    "refName": "contigA",
    "start": 7739,
    "strand": 0,
    "uniqueId": "bed-156044",
  },
  Object {
    "end": 8086,
    "refName": "contigA",
    "start": 8077,
    "strand": 0,
    "uniqueId": "bed-156062",
  },
  Object {
    "end": 8137,
    "refName": "contigA",
    "start": 8128,
    "strand": 0,
    "uniqueId": "bed-156080",
  },
  Object {
    "end": 8141,
    "refName": "contigA",
    "start": 8132,
    "strand": 0,
    "uniqueId": "bed-156098",
  },
  Object {
    "end": 8219,
    "refName": "contigA",
    "start": 8210,
    "strand": 0,
    "uniqueId": "bed-156116",
  },
  Object {
    "end": 8276,
    "refName": "contigA",
    "start": 8267,
    "strand": 0,
    "uniqueId": "bed-156134",
  },
  Object {
    "end": 8337,
    "refName": "contigA",
    "start": 8328,
    "strand": 0,
    "uniqueId": "bed-156152",
  },
  Object {
    "end": 8533,
    "refName": "contigA",
    "start": 8524,
    "strand": 0,
    "uniqueId": "bed-156170",
  },
  Object {
    "end": 8668,
    "refName": "contigA",
    "start": 8659,
    "strand": 0,
    "uniqueId": "bed-156188",
  },
  Object {
    "end": 8669,
    "refName": "contigA",
    "start": 8660,
    "strand": 0,
    "uniqueId": "bed-156206",
  },
  Object {
    "end": 8751,
    "refName": "contigA",
    "start": 8742,
    "strand": 0,
    "uniqueId": "bed-156224",
  },
  Object {
    "end": 8820,
    "refName": "contigA",
    "start": 8811,
    "strand": 0,
    "uniqueId": "bed-156242",
  },
  Object {
    "end": 8825,
    "refName": "contigA",
    "start": 8816,
    "strand": 0,
    "uniqueId": "bed-156260",
  },
  Object {
    "end": 8973,
    "refName": "contigA",
    "start": 8964,
    "strand": 0,
    "uniqueId": "bed-156278",
  },
  Object {
    "end": 9057,
    "refName": "contigA",
    "start": 9048,
    "strand": 0,
    "uniqueId": "bed-156296",
  },
  Object {
    "end": 9063,
    "refName": "contigA",
    "start": 9054,
    "strand": 0,
    "uniqueId": "bed-156314",
  },
  Object {
    "end": 9145,
    "refName": "contigA",
    "start": 9136,
    "strand": 0,
    "uniqueId": "bed-156332",
  },
  Object {
    "end": 9252,
    "refName": "contigA",
    "start": 9243,
    "strand": 0,
    "uniqueId": "bed-156350",
  },
  Object {
    "end": 9329,
    "refName": "contigA",
    "start": 9320,
    "strand": 0,
    "uniqueId": "bed-156368",
  },
  Object {
    "end": 9375,
    "refName": "contigA",
    "start": 9366,
    "strand": 0,
    "uniqueId": "bed-156386",
  },
  Object {
    "end": 9534,
    "refName": "contigA",
    "start": 9525,
    "strand": 0,
    "uniqueId": "bed-156404",
  },
  Object {
    "end": 9589,
    "refName": "contigA",
    "start": 9580,
    "strand": 0,
    "uniqueId": "bed-156422",
  },
  Object {
    "end": 9619,
    "refName": "contigA",
    "start": 9610,
    "strand": 0,
    "uniqueId": "bed-156440",
  },
  Object {
    "end": 9753,
    "refName": "contigA",
    "start": 9744,
    "strand": 0,
    "uniqueId": "bed-156458",
  },
  Object {
    "end": 9762,
    "refName": "contigA",
    "start": 9753,
    "strand": 0,
    "uniqueId": "bed-156476",
  },
  Object {
    "end": 9768,
    "refName": "contigA",
    "start": 9759,
    "strand": 0,
    "uniqueId": "bed-156494",
  },
  Object {
    "end": 9816,
    "refName": "contigA",
    "start": 9807,
    "strand": 0,
    "uniqueId": "bed-156512",
  },
  Object {
    "end": 9862,
    "refName": "contigA",
    "start": 9853,
    "strand": 0,
    "uniqueId": "bed-156530",
  },
  Object {
    "end": 9893,
    "refName": "contigA",
    "start": 9884,
    "strand": 0,
    "uniqueId": "bed-156548",
  },
  Object {
    "end": 9929,
    "refName": "contigA",
    "start": 9920,
    "strand": 0,
    "uniqueId": "bed-156566",
  },
  Object {
    "end": 10052,
    "refName": "contigA",
    "start": 10043,
    "strand": 0,
    "uniqueId": "bed-156584",
  },
  Object {
    "end": 10225,
    "refName": "contigA",
    "start": 10216,
    "strand": 0,
    "uniqueId": "bed-156604",
  },
  Object {
    "end": 10226,
    "refName": "contigA",
    "start": 10217,
    "strand": 0,
    "uniqueId": "bed-156624",
  },
  Object {
    "end": 10261,
    "refName": "contigA",
    "start": 10252,
    "strand": 0,
    "uniqueId": "bed-156644",
  },
  Object {
    "end": 10393,
    "refName": "contigA",
    "start": 10384,
    "strand": 0,
    "uniqueId": "bed-156664",
  },
  Object {
    "end": 10507,
    "refName": "contigA",
    "start": 10498,
    "strand": 0,
    "uniqueId": "bed-156684",
  },
  Object {
    "end": 10594,
    "refName": "contigA",
    "start": 10585,
    "strand": 0,
    "uniqueId": "bed-156704",
  },
  Object {
    "end": 10693,
    "refName": "contigA",
    "start": 10684,
    "strand": 0,
    "uniqueId": "bed-156724",
  },
  Object {
    "end": 10790,
    "refName": "contigA",
    "start": 10781,
    "strand": 0,
    "uniqueId": "bed-156744",
  },
  Object {
    "end": 10884,
    "refName": "contigA",
    "start": 10875,
    "strand": 0,
    "uniqueId": "bed-156764",
  },
  Object {
    "end": 11013,
    "refName": "contigA",
    "start": 11004,
    "strand": 0,
    "uniqueId": "bed-156784",
  },
  Object {
    "end": 11104,
    "refName": "contigA",
    "start": 11095,
    "strand": 0,
    "uniqueId": "bed-156804",
  },
  Object {
    "end": 11191,
    "refName": "contigA",
    "start": 11182,
    "strand": 0,
    "uniqueId": "bed-156824",
  },
  Object {
    "end": 11216,
    "refName": "contigA",
    "start": 11207,
    "strand": 0,
    "uniqueId": "bed-156844",
  },
  Object {
    "end": 11250,
    "refName": "contigA",
    "start": 11241,
    "strand": 0,
    "uniqueId": "bed-156864",
  },
  Object {
    "end": 11344,
    "refName": "contigA",
    "start": 11335,
    "strand": 0,
    "uniqueId": "bed-156884",
  },
  Object {
    "end": 11349,
    "refName": "contigA",
    "start": 11340,
    "strand": 0,
    "uniqueId": "bed-156904",
  },
  Object {
    "end": 11544,
    "refName": "contigA",
    "start": 11535,
    "strand": 0,
    "uniqueId": "bed-156924",
  },
  Object {
    "end": 11552,
    "refName": "contigA",
    "start": 11543,
    "strand": 0,
    "uniqueId": "bed-156944",
  },
  Object {
    "end": 11558,
    "refName": "contigA",
    "start": 11549,
    "strand": 0,
    "uniqueId": "bed-156964",
  },
  Object {
    "end": 11662,
    "refName": "contigA",
    "start": 11653,
    "strand": 0,
    "uniqueId": "bed-156984",
  },
  Object {
    "end": 11684,
    "refName": "contigA",
    "start": 11675,
    "strand": 0,
    "uniqueId": "bed-157004",
  },
  Object {
    "end": 11698,
    "refName": "contigA",
    "start": 11689,
    "strand": 0,
    "uniqueId": "bed-157024",
  },
  Object {
    "end": 11783,
    "refName": "contigA",
    "start": 11774,
    "strand": 0,
    "uniqueId": "bed-157044",
  },
  Object {
    "end": 11841,
    "refName": "contigA",
    "start": 11832,
    "strand": 0,
    "uniqueId": "bed-157064",
  },
  Object {
    "end": 12395,
    "refName": "contigA",
    "start": 12386,
    "strand": 0,
    "uniqueId": "bed-157084",
  },
  Object {
    "end": 12417,
    "refName": "contigA",
    "start": 12408,
    "strand": 0,
    "uniqueId": "bed-157104",
  },
  Object {
    "end": 12450,
    "refName": "contigA",
    "start": 12441,
    "strand": 0,
    "uniqueId": "bed-157124",
  },
  Object {
    "end": 12539,
    "refName": "contigA",
    "start": 12530,
    "strand": 0,
    "uniqueId": "bed-157144",
  },
  Object {
    "end": 12747,
    "refName": "contigA",
    "start": 12738,
    "strand": 0,
    "uniqueId": "bed-157164",
  },
]
`;

exports[`adapter can fetch features from volvox-bed12.bed.gz 1`] = `
Array [
  Object {
    "blockStarts": Array [
      0,
      1950,
      3950,
      5950,
    ],
    "end": 9000,
    "itemRgb": "0,0,0",
    "name": "EDEN.1",
    "refName": "ctgA",
    "score": 1000,
    "start": 1049,
    "strand": 1,
    "subfeatures": Array [
      Object {
        "end": 1200,
        "parentId": "bed-45689",
        "start": 1049,
        "strand": 1,
        "type": "five_prime_UTR",
        "uniqueId": "bed-45689-0",
      },
      Object {
        "end": 1500,
        "parentId": "bed-45689",
        "start": 1200,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "bed-45689-1",
      },
      Object {
        "end": 3902,
        "parentId": "bed-45689",
        "start": 2999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "bed-45689-2",
      },
      Object {
        "end": 5500,
        "parentId": "bed-45689",
        "start": 4999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "bed-45689-3",
      },
      Object {
        "end": 7608,
        "parentId": "bed-45689",
        "start": 6999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "bed-45689-4",
      },
      Object {
        "end": 9000,
        "parentId": "bed-45689",
        "start": 7608,
        "strand": 1,
        "type": "three_prime_UTR",
        "uniqueId": "bed-45689-5",
      },
    ],
    "type": "mRNA",
    "uniqueId": "bed-45689",
  },
  Object {
    "blockStarts": Array [
      0,
      3950,
      5950,
    ],
    "end": 9000,
    "itemRgb": "0,0,0",
    "name": "EDEN.2",
    "refName": "ctgA",
    "score": 1000,
    "start": 1049,
    "strand": 1,
    "subfeatures": Array [
      Object {
        "end": 1200,
        "parentId": "bed-45786",
        "start": 1049,
        "strand": 1,
        "type": "five_prime_UTR",
        "uniqueId": "bed-45786-0",
      },
      Object {
        "end": 1500,
        "parentId": "bed-45786",
        "start": 1200,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "bed-45786-1",
      },
      Object {
        "end": 5500,
        "parentId": "bed-45786",
        "start": 4999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "bed-45786-2",
      },
      Object {
        "end": 7608,
        "parentId": "bed-45786",
        "start": 6999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "bed-45786-3",
      },
      Object {
        "end": 9000,
        "parentId": "bed-45786",
        "start": 7608,
        "strand": 1,
        "type": "three_prime_UTR",
        "uniqueId": "bed-45786-4",
      },
    ],
    "type": "mRNA",
    "uniqueId": "bed-45786",
  },
  Object {
    "blockStarts": Array [
      0,
      1700,
      3700,
      5700,
    ],
    "end": 9000,
    "itemRgb": "0,0,0",
    "name": "EDEN.3",
    "refName": "ctgA",
    "score": 1000,
    "start": 1299,
    "strand": 1,
    "subfeatures": Array [
      Object {
        "end": 1500,
        "parentId": "bed-45874",
        "start": 1299,
        "strand": 1,
        "type": "five_prime_UTR",
        "uniqueId": "bed-45874-0",
      },
      Object {
        "end": 3300,
        "parentId": "bed-45874",
        "start": 2999,
        "strand": 1,
        "type": "five_prime_UTR",
        "uniqueId": "bed-45874-1",
      },
      Object {
        "end": 3902,
        "parentId": "bed-45874",
        "start": 3300,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "bed-45874-2",
      },
      Object {
        "end": 5500,
        "parentId": "bed-45874",
        "start": 4999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "bed-45874-3",
      },
      Object {
        "end": 7600,
        "parentId": "bed-45874",
        "start": 6999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "bed-45874-4",
      },
      Object {
        "end": 9000,
        "parentId": "bed-45874",
        "start": 7600,
        "strand": 1,
        "type": "three_prime_UTR",
        "uniqueId": "bed-45874-5",
      },
    ],
    "type": "mRNA",
    "uniqueId": "bed-45874",
  },
  Object {
    "blockStarts": Array [
      0,
      1600,
      3600,
    ],
    "end": 23000,
    "itemRgb": "0,0,0",
    "name": "rna-Apple3",
    "refName": "ctgA",
    "score": 1000,
    "start": 17399,
    "strand": 1,
    "subfeatures": Array [
      Object {
        "end": 17999,
        "parentId": "bed-45971",
        "start": 17399,
        "strand": 1,
        "type": "five_prime_UTR",
        "uniqueId": "bed-45971-0",
      },
      Object {
        "end": 18800,
        "parentId": "bed-45971",
        "start": 17999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "bed-45971-1",
      },
      Object {
        "end": 19500,
        "parentId": "bed-45971",
        "start": 18999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "bed-45971-2",
      },
      Object {
        "end": 21200,
        "parentId": "bed-45971",
        "start": 20999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "bed-45971-3",
      },
      Object {
        "end": 23000,
        "parentId": "bed-45971",
        "start": 21200,
        "strand": 1,
        "type": "three_prime_UTR",
        "uniqueId": "bed-45971-4",
      },
    ],
    "type": "mRNA",
    "uniqueId": "bed-45971",
  },
]
`;
